Prepare to learn DenseNet 121

--- a/keras_read_data_demo.ipynb
+++ b/keras_read_data_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,16 +14,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gonglinyuan\\Anaconda3\\envs\\deep_learning\\lib\\site-packages\\h5py\\__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
-    "from keras.preprocessing.image import ImageDataGenerator"
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -67,9 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 37111 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "data_generator = data_generator.flow_from_directory(\n",
     "    input_path,\n",
@@ -83,14 +102,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52.434581103515626 52.434581103515626 52.434581103515626\n"
+     ]
+    }
+   ],
    "source": [
+    "r, g, b, c = 0.0, 0.0, 0.0, 0\n",
     "for (x,y) in data_generator:\n",
-    "    print(x.shape,y.shape)\n",
-    "    break"
+    "    r += np.mean(x[:,:,:,0])\n",
+    "    g += np.mean(x[:,:,:,1])\n",
+    "    b += np.mean(x[:,:,:,2])\n",
+    "    c += 1\n",
+    "    if c >= 5000:\n",
+    "        break\n",
+    "print(r / c, g / c, b / c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
