--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,32 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import functools\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "from keras.callbacks import ReduceLROnPlateau\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras import backend as K\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "import dense_net_121"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "input_path = '../MURA_trainval_keras/'"
+    "input_path = '../MURA_trainval_keras/'\n",
+    "pretrained_weights_path = '../pretrain_network_weights/densenet121_weights_tf.h5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -38,17 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 37111 images belonging to 2 classes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_generator = data_generator.flow_from_directory(\n",
     "    input_path,\n",
@@ -62,23 +57,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "R_MEAN, G_MEAN, B_MEAN, SCALE = 52.434581103515626, 52.434581103515626, 52.434581103515626, 0.017"
+    "model = dense_net_121.dense_net_121(256, 256, color_type=3, weights_path=pretrained_weights_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "K.tensorflow_backend._get_available_gpus()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit_generator(\n",
+    "    data_generator,\n",
+    "    epochs=1,\n",
+    "    verbose=2,\n",
+    "    validation_data=None,\n",
+    "    validation_steps=None,\n",
+    "    callbacks=[ReduceLROnPlateau(monitor='val_loss', factor=0.1, patience=5, mode='min')]\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
