--- a/keras_read_data_demo.ipynb
+++ b/keras_read_data_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -14,19 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gonglinyuan\\Anaconda3\\envs\\deep_learning\\lib\\site-packages\\h5py\\__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "import numpy as np"
@@ -34,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -78,17 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 37111 images belonging to 2 classes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_generator = data_generator.flow_from_directory(\n",
     "    input_path,\n",
@@ -102,37 +84,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "52.434581103515626 52.434581103515626 52.434581103515626\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "r, g, b, c = 0.0, 0.0, 0.0, 0\n",
+    "r, g, b, r2, g2, b2, c = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0\n",
     "for (x,y) in data_generator:\n",
     "    r += np.mean(x[:,:,:,0])\n",
     "    g += np.mean(x[:,:,:,1])\n",
     "    b += np.mean(x[:,:,:,2])\n",
+    "    r2 += np.mean(x[:,:,:,0] ** 2)\n",
+    "    g2 += np.mean(x[:,:,:,1] ** 2)\n",
+    "    b2 += np.mean(x[:,:,:,2] ** 2)\n",
     "    c += 1\n",
     "    if c >= 5000:\n",
-    "        break\n",
-    "print(r / c, g / c, b / c)"
+    "        break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(r / c, g / c, b / c)\n",
+    "print(1.0 / np.sqrt((r2 / c) - (r / c) ** 2), 1.0 / np.sqrt((g2 / c) - (g / c) ** 2), 1.0 / np.sqrt((b2 / c) - (b / c) ** 2))"
+   ]
   }
  ],
  "metadata": {
