Update Transfer Leaning Example.ipynb

--- a/Transfer Leaning Example.ipynb
+++ b/Transfer Leaning Example.ipynb
@@ -216,7 +216,7 @@
     "    images_so_far = 0\n",
     "    fig = plt.figure()\n",
     "\n",
-    "    for i, data in enumerate(dataloaders['val']):\n",
+    "    for i, data in enumerate(dataloaders['valid']):\n",
     "        inputs, labels = data\n",
     "        if use_gpu:\n",
     "            inputs, labels = Variable(inputs.cuda()), Variable(labels.cuda())\n",
