--- a/Transfer Leaning Example.ipynb
+++ b/Transfer Leaning Example.ipynb
@@ -25,7 +25,8 @@
     "import copy\n",
     "\n",
     "plt.ion()   # interactive mode\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"4\""
+    "# Comment below if you want to use multiple GPUs\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"3\""
    ]
   },
   {
@@ -55,24 +56,13 @@
     "image_datasets = {x: datasets.ImageFolder(os.path.join(data_dir, x),\n",
     "                                          data_transforms[x])\n",
     "                  for x in ['train', 'valid']}\n",
-    "dataloaders = {x: torch.utils.data.DataLoader(image_datasets[x], batch_size=16,\n",
+    "dataloaders = {x: torch.utils.data.DataLoader(image_datasets[x], batch_size=80,\n",
     "                                             shuffle=True, num_workers=4)\n",
     "              for x in ['train', 'valid']}\n",
     "dataset_sizes = {x: len(image_datasets[x]) for x in ['train', 'valid']}\n",
     "class_names = image_datasets['train'].classes\n",
     "\n",
     "use_gpu = torch.cuda.is_available()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "class_names"
    ]
   },
   {
@@ -156,8 +146,8 @@
     "                    optimizer.step()\n",
     "\n",
     "                # statistics\n",
-    "                running_loss += loss.data[0] * inputs.size(0)\n",
-    "                running_corrects += torch.sum(preds == labels.data)\n",
+    "                running_loss += loss.data.item() * inputs.size(0)\n",
+    "                running_corrects += torch.sum(preds == labels.data).item()\n",
     "\n",
     "            epoch_loss = running_loss / dataset_sizes[phase]\n",
     "            epoch_acc = running_corrects / dataset_sizes[phase]\n",
@@ -229,14 +219,17 @@
     "\n",
     "if use_gpu:\n",
     "    model_ft = model_ft.cuda()\n",
+    "    # Uncomment below if you want to use multiple GPUs\n",
+    "    # model_ft = nn.DataParallel(model_ft)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "# Observe that all parameters are being optimized\n",
-    "optimizer_ft = optim.SGD(model_ft.parameters(), lr=0.001, momentum=0.9)\n",
+    "# optimizer_ft = optim.SGD(model_ft.parameters(), lr=0.001, momentum=0.9)\n",
+    "optimizer_ft = torch.optim.Adam(model_ft.parameters(), lr=0.001)\n",
     "\n",
     "# Decay LR by a factor of 0.1 every 7 epochs\n",
-    "exp_lr_scheduler = lr_scheduler.StepLR(optimizer_ft, step_size=7, gamma=0.1)"
+    "exp_lr_scheduler = lr_scheduler.StepLR(optimizer_ft, step_size=25, gamma=0.1)"
    ]
   },
   {
@@ -247,15 +240,6 @@
    "source": [
     "model_ft = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler,\n",
     "                       num_epochs=25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visualize_model(model_ft)"
    ]
   },
   {
