--- a/Transfer Leaning Example.ipynb
+++ b/Transfer Leaning Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,24 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data augmentation and normalization for training\n",
     "# Just normalization for validation\n",
+    "\n",
+    "DATA_MEAN = 0.20558404267255\n",
+    "DATA_STD = 0.17694948680626902473216631207703\n",
+    "\n",
     "data_transforms = {\n",
     "    'train': transforms.Compose([\n",
     "        transforms.RandomResizedCrop(224),\n",
     "        transforms.RandomHorizontalFlip(),\n",
     "        transforms.ToTensor(),\n",
-    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "        transforms.Normalize([DATA_MEAN, DATA_MEAN, DATA_MEAN], [DATA_STD, DATA_STD, DATA_STD])\n",
     "    ]),\n",
     "    'valid': transforms.Compose([\n",
     "        transforms.Resize(256),\n",
     "        transforms.CenterCrop(224),\n",
     "        transforms.ToTensor(),\n",
-    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "        transforms.Normalize([DATA_MEAN, DATA_MEAN, DATA_MEAN], [DATA_STD, DATA_STD, DATA_STD])\n",
     "    ]),\n",
     "}\n",
     "\n",
@@ -63,6 +67,180 @@
     "class_names = image_datasets['train'].classes\n",
     "\n",
     "use_gpu = torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor([[[[ 0.0059,  0.0059,  0.0078,  ...,  0.0941,  0.0941,  0.0961],\n",
+      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0941,  0.0961,  0.1000],\n",
+      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0961,  0.1000,  0.1039],\n",
+      "          ...,\n",
+      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1176],\n",
+      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1137],\n",
+      "          [ 0.1255,  0.1275,  0.1275,  ...,  0.1137,  0.1137,  0.1118]],\n",
+      "\n",
+      "         [[ 0.0059,  0.0059,  0.0078,  ...,  0.0941,  0.0941,  0.0961],\n",
+      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0941,  0.0961,  0.1000],\n",
+      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0961,  0.1000,  0.1039],\n",
+      "          ...,\n",
+      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1176],\n",
+      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1137],\n",
+      "          [ 0.1255,  0.1275,  0.1275,  ...,  0.1137,  0.1137,  0.1118]],\n",
+      "\n",
+      "         [[ 0.0059,  0.0059,  0.0078,  ...,  0.0941,  0.0941,  0.0961],\n",
+      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0941,  0.0961,  0.1000],\n",
+      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0961,  0.1000,  0.1039],\n",
+      "          ...,\n",
+      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1176],\n",
+      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1137],\n",
+      "          [ 0.1255,  0.1275,  0.1275,  ...,  0.1137,  0.1137,  0.1118]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 0.0529,  0.0549,  0.0549,  ...,  0.1196,  0.1196,  0.1196],\n",
+      "          [ 0.0549,  0.0549,  0.0529,  ...,  0.1176,  0.1176,  0.1176],\n",
+      "          [ 0.0529,  0.0549,  0.0549,  ...,  0.1176,  0.1216,  0.1216],\n",
+      "          ...,\n",
+      "          [ 0.0490,  0.0510,  0.0510,  ...,  0.1235,  0.1216,  0.1216],\n",
+      "          [ 0.0510,  0.0510,  0.0490,  ...,  0.1196,  0.1196,  0.1216],\n",
+      "          [ 0.0510,  0.0490,  0.0510,  ...,  0.1235,  0.1216,  0.1235]],\n",
+      "\n",
+      "         [[ 0.0529,  0.0549,  0.0549,  ...,  0.1196,  0.1196,  0.1196],\n",
+      "          [ 0.0549,  0.0549,  0.0529,  ...,  0.1176,  0.1176,  0.1176],\n",
+      "          [ 0.0529,  0.0549,  0.0549,  ...,  0.1176,  0.1216,  0.1216],\n",
+      "          ...,\n",
+      "          [ 0.0490,  0.0510,  0.0510,  ...,  0.1235,  0.1216,  0.1216],\n",
+      "          [ 0.0510,  0.0510,  0.0490,  ...,  0.1196,  0.1196,  0.1216],\n",
+      "          [ 0.0510,  0.0490,  0.0510,  ...,  0.1235,  0.1216,  0.1235]],\n",
+      "\n",
+      "         [[ 0.0529,  0.0549,  0.0549,  ...,  0.1196,  0.1196,  0.1196],\n",
+      "          [ 0.0549,  0.0549,  0.0529,  ...,  0.1176,  0.1176,  0.1176],\n",
+      "          [ 0.0529,  0.0549,  0.0549,  ...,  0.1176,  0.1216,  0.1216],\n",
+      "          ...,\n",
+      "          [ 0.0490,  0.0510,  0.0510,  ...,  0.1235,  0.1216,  0.1216],\n",
+      "          [ 0.0510,  0.0510,  0.0490,  ...,  0.1196,  0.1196,  0.1216],\n",
+      "          [ 0.0510,  0.0490,  0.0510,  ...,  0.1235,  0.1216,  0.1235]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1471],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1451],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1412],\n",
+      "          ...,\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1353,  0.1392],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1333,  0.1373],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1333,  0.1373,  0.1314]],\n",
+      "\n",
+      "         [[ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1471],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1451],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1412],\n",
+      "          ...,\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1353,  0.1392],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1333,  0.1373],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1333,  0.1373,  0.1314]],\n",
+      "\n",
+      "         [[ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1471],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1451],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1412],\n",
+      "          ...,\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1353,  0.1392],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1333,  0.1373],\n",
+      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1333,  0.1373,  0.1314]]],\n",
+      "\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "\n",
+      "        [[[ 0.0569,  0.0549,  0.0529,  ...,  0.0529,  0.0549,  0.0529],\n",
+      "          [ 0.0569,  0.0569,  0.0549,  ...,  0.0529,  0.0549,  0.0529],\n",
+      "          [ 0.0569,  0.0549,  0.0549,  ...,  0.0549,  0.0569,  0.0529],\n",
+      "          ...,\n",
+      "          [ 0.0039,  0.0059,  0.0039,  ...,  0.0039,  0.0059,  0.0059],\n",
+      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0059,  0.0059,  0.0059],\n",
+      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0039,  0.0059,  0.0059]],\n",
+      "\n",
+      "         [[ 0.0569,  0.0549,  0.0529,  ...,  0.0529,  0.0549,  0.0529],\n",
+      "          [ 0.0569,  0.0569,  0.0549,  ...,  0.0529,  0.0549,  0.0529],\n",
+      "          [ 0.0569,  0.0549,  0.0549,  ...,  0.0549,  0.0569,  0.0529],\n",
+      "          ...,\n",
+      "          [ 0.0039,  0.0059,  0.0039,  ...,  0.0039,  0.0059,  0.0059],\n",
+      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0059,  0.0059,  0.0059],\n",
+      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0039,  0.0059,  0.0059]],\n",
+      "\n",
+      "         [[ 0.0569,  0.0549,  0.0529,  ...,  0.0529,  0.0549,  0.0529],\n",
+      "          [ 0.0569,  0.0569,  0.0549,  ...,  0.0529,  0.0549,  0.0529],\n",
+      "          [ 0.0569,  0.0549,  0.0549,  ...,  0.0549,  0.0569,  0.0529],\n",
+      "          ...,\n",
+      "          [ 0.0039,  0.0059,  0.0039,  ...,  0.0039,  0.0059,  0.0059],\n",
+      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0059,  0.0059,  0.0059],\n",
+      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0039,  0.0059,  0.0059]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
+      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
+      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
+      "          ...,\n",
+      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1059],\n",
+      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1039],\n",
+      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1078,  0.1059,  0.1039]],\n",
+      "\n",
+      "         [[ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
+      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
+      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
+      "          ...,\n",
+      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1059],\n",
+      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1039],\n",
+      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1078,  0.1059,  0.1039]],\n",
+      "\n",
+      "         [[ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
+      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
+      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
+      "          ...,\n",
+      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1059],\n",
+      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1039],\n",
+      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1078,  0.1059,  0.1039]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 0.1608,  0.1608,  0.1588,  ...,  0.0294,  0.0275,  0.0275],\n",
+      "          [ 0.1608,  0.1627,  0.1608,  ...,  0.0569,  0.0490,  0.0431],\n",
+      "          [ 0.1647,  0.1647,  0.1647,  ...,  0.0922,  0.0843,  0.0765],\n",
+      "          ...,\n",
+      "          [ 0.1725,  0.1745,  0.1745,  ...,  0.1765,  0.1745,  0.1784],\n",
+      "          [ 0.1706,  0.1725,  0.1725,  ...,  0.1745,  0.1745,  0.1765],\n",
+      "          [ 0.1667,  0.1686,  0.1686,  ...,  0.1745,  0.1745,  0.1784]],\n",
+      "\n",
+      "         [[ 0.1608,  0.1608,  0.1588,  ...,  0.0294,  0.0275,  0.0275],\n",
+      "          [ 0.1608,  0.1627,  0.1608,  ...,  0.0569,  0.0490,  0.0431],\n",
+      "          [ 0.1647,  0.1647,  0.1647,  ...,  0.0922,  0.0843,  0.0765],\n",
+      "          ...,\n",
+      "          [ 0.1725,  0.1745,  0.1745,  ...,  0.1765,  0.1745,  0.1784],\n",
+      "          [ 0.1706,  0.1725,  0.1725,  ...,  0.1745,  0.1745,  0.1765],\n",
+      "          [ 0.1667,  0.1686,  0.1686,  ...,  0.1745,  0.1745,  0.1784]],\n",
+      "\n",
+      "         [[ 0.1608,  0.1608,  0.1588,  ...,  0.0294,  0.0275,  0.0275],\n",
+      "          [ 0.1608,  0.1627,  0.1608,  ...,  0.0569,  0.0490,  0.0431],\n",
+      "          [ 0.1647,  0.1647,  0.1647,  ...,  0.0922,  0.0843,  0.0765],\n",
+      "          ...,\n",
+      "          [ 0.1725,  0.1745,  0.1745,  ...,  0.1765,  0.1745,  0.1784],\n",
+      "          [ 0.1706,  0.1725,  0.1725,  ...,  0.1745,  0.1745,  0.1765],\n",
+      "          [ 0.1667,  0.1686,  0.1686,  ...,  0.1745,  0.1745,  0.1784]]]]), tensor([ 0,  1,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,\n",
+      "         1,  1,  0,  1,  1,  1,  0,  1,  0,  0,  0,  0,  0,  1,\n",
+      "         0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  1,  1,  0,  1,\n",
+      "         1,  0,  0,  1,  0,  0,  1,  0,  0,  0,  0,  1,  1,  0,\n",
+      "         1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  0,  0,  0,\n",
+      "         0,  1,  0,  0,  0,  1,  0,  0,  0,  0])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in dataloaders['train']:\n",
+    "    print(i)\n",
+    "    break"
    ]
   },
   {
@@ -226,7 +404,7 @@
     "\n",
     "# Observe that all parameters are being optimized\n",
     "# optimizer_ft = optim.SGD(model_ft.parameters(), lr=0.001, momentum=0.9)\n",
-    "optimizer_ft = torch.optim.Adam(model_ft.parameters(), lr=0.001)\n",
+    "optimizer_ft = torch.optim.Adam(model_ft.parameters(), lr=0.0004, betas=(0.9, 0.999), eps=1e-08, weight_decay=0, amsgrad=False)\n",
     "\n",
     "# Decay LR by a factor of 0.1 every 7 epochs\n",
     "exp_lr_scheduler = lr_scheduler.StepLR(optimizer_ft, step_size=25, gamma=0.1)"
