--- a/Transfer Leaning Example.ipynb
+++ b/Transfer Leaning Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "image_datasets = {x: datasets.ImageFolder(os.path.join(data_dir, x),\n",
     "                                          data_transforms[x])\n",
     "                  for x in ['train', 'valid']}\n",
-    "dataloaders = {x: torch.utils.data.DataLoader(image_datasets[x], batch_size=80,\n",
+    "dataloaders = {x: torch.utils.data.DataLoader(image_datasets[x], batch_size=16,\n",
     "                                             shuffle=True, num_workers=4)\n",
     "              for x in ['train', 'valid']}\n",
     "dataset_sizes = {x: len(image_datasets[x]) for x in ['train', 'valid']}\n",
@@ -71,172 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[tensor([[[[ 0.0059,  0.0059,  0.0078,  ...,  0.0941,  0.0941,  0.0961],\n",
-      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0941,  0.0961,  0.1000],\n",
-      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0961,  0.1000,  0.1039],\n",
-      "          ...,\n",
-      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1176],\n",
-      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1137],\n",
-      "          [ 0.1255,  0.1275,  0.1275,  ...,  0.1137,  0.1137,  0.1118]],\n",
-      "\n",
-      "         [[ 0.0059,  0.0059,  0.0078,  ...,  0.0941,  0.0941,  0.0961],\n",
-      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0941,  0.0961,  0.1000],\n",
-      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0961,  0.1000,  0.1039],\n",
-      "          ...,\n",
-      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1176],\n",
-      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1137],\n",
-      "          [ 0.1255,  0.1275,  0.1275,  ...,  0.1137,  0.1137,  0.1118]],\n",
-      "\n",
-      "         [[ 0.0059,  0.0059,  0.0078,  ...,  0.0941,  0.0941,  0.0961],\n",
-      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0941,  0.0961,  0.1000],\n",
-      "          [ 0.0059,  0.0078,  0.0078,  ...,  0.0961,  0.1000,  0.1039],\n",
-      "          ...,\n",
-      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1176],\n",
-      "          [ 0.1255,  0.1255,  0.1275,  ...,  0.1157,  0.1137,  0.1137],\n",
-      "          [ 0.1255,  0.1275,  0.1275,  ...,  0.1137,  0.1137,  0.1118]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 0.0529,  0.0549,  0.0549,  ...,  0.1196,  0.1196,  0.1196],\n",
-      "          [ 0.0549,  0.0549,  0.0529,  ...,  0.1176,  0.1176,  0.1176],\n",
-      "          [ 0.0529,  0.0549,  0.0549,  ...,  0.1176,  0.1216,  0.1216],\n",
-      "          ...,\n",
-      "          [ 0.0490,  0.0510,  0.0510,  ...,  0.1235,  0.1216,  0.1216],\n",
-      "          [ 0.0510,  0.0510,  0.0490,  ...,  0.1196,  0.1196,  0.1216],\n",
-      "          [ 0.0510,  0.0490,  0.0510,  ...,  0.1235,  0.1216,  0.1235]],\n",
-      "\n",
-      "         [[ 0.0529,  0.0549,  0.0549,  ...,  0.1196,  0.1196,  0.1196],\n",
-      "          [ 0.0549,  0.0549,  0.0529,  ...,  0.1176,  0.1176,  0.1176],\n",
-      "          [ 0.0529,  0.0549,  0.0549,  ...,  0.1176,  0.1216,  0.1216],\n",
-      "          ...,\n",
-      "          [ 0.0490,  0.0510,  0.0510,  ...,  0.1235,  0.1216,  0.1216],\n",
-      "          [ 0.0510,  0.0510,  0.0490,  ...,  0.1196,  0.1196,  0.1216],\n",
-      "          [ 0.0510,  0.0490,  0.0510,  ...,  0.1235,  0.1216,  0.1235]],\n",
-      "\n",
-      "         [[ 0.0529,  0.0549,  0.0549,  ...,  0.1196,  0.1196,  0.1196],\n",
-      "          [ 0.0549,  0.0549,  0.0529,  ...,  0.1176,  0.1176,  0.1176],\n",
-      "          [ 0.0529,  0.0549,  0.0549,  ...,  0.1176,  0.1216,  0.1216],\n",
-      "          ...,\n",
-      "          [ 0.0490,  0.0510,  0.0510,  ...,  0.1235,  0.1216,  0.1216],\n",
-      "          [ 0.0510,  0.0510,  0.0490,  ...,  0.1196,  0.1196,  0.1216],\n",
-      "          [ 0.0510,  0.0490,  0.0510,  ...,  0.1235,  0.1216,  0.1235]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1471],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1451],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1412],\n",
-      "          ...,\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1353,  0.1392],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1333,  0.1373],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1333,  0.1373,  0.1314]],\n",
-      "\n",
-      "         [[ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1471],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1451],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1412],\n",
-      "          ...,\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1353,  0.1392],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1333,  0.1373],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1333,  0.1373,  0.1314]],\n",
-      "\n",
-      "         [[ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1471],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1451],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1412,  0.1412,  0.1412],\n",
-      "          ...,\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1353,  0.1392],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1294,  0.1333,  0.1373],\n",
-      "          [ 0.0745,  0.0745,  0.0745,  ...,  0.1333,  0.1373,  0.1314]]],\n",
-      "\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "\n",
-      "        [[[ 0.0569,  0.0549,  0.0529,  ...,  0.0529,  0.0549,  0.0529],\n",
-      "          [ 0.0569,  0.0569,  0.0549,  ...,  0.0529,  0.0549,  0.0529],\n",
-      "          [ 0.0569,  0.0549,  0.0549,  ...,  0.0549,  0.0569,  0.0529],\n",
-      "          ...,\n",
-      "          [ 0.0039,  0.0059,  0.0039,  ...,  0.0039,  0.0059,  0.0059],\n",
-      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0059,  0.0059,  0.0059],\n",
-      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0039,  0.0059,  0.0059]],\n",
-      "\n",
-      "         [[ 0.0569,  0.0549,  0.0529,  ...,  0.0529,  0.0549,  0.0529],\n",
-      "          [ 0.0569,  0.0569,  0.0549,  ...,  0.0529,  0.0549,  0.0529],\n",
-      "          [ 0.0569,  0.0549,  0.0549,  ...,  0.0549,  0.0569,  0.0529],\n",
-      "          ...,\n",
-      "          [ 0.0039,  0.0059,  0.0039,  ...,  0.0039,  0.0059,  0.0059],\n",
-      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0059,  0.0059,  0.0059],\n",
-      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0039,  0.0059,  0.0059]],\n",
-      "\n",
-      "         [[ 0.0569,  0.0549,  0.0529,  ...,  0.0529,  0.0549,  0.0529],\n",
-      "          [ 0.0569,  0.0569,  0.0549,  ...,  0.0529,  0.0549,  0.0529],\n",
-      "          [ 0.0569,  0.0549,  0.0549,  ...,  0.0549,  0.0569,  0.0529],\n",
-      "          ...,\n",
-      "          [ 0.0039,  0.0059,  0.0039,  ...,  0.0039,  0.0059,  0.0059],\n",
-      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0059,  0.0059,  0.0059],\n",
-      "          [ 0.0059,  0.0039,  0.0039,  ...,  0.0039,  0.0059,  0.0059]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
-      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
-      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
-      "          ...,\n",
-      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1059],\n",
-      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1039],\n",
-      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1078,  0.1059,  0.1039]],\n",
-      "\n",
-      "         [[ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
-      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
-      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
-      "          ...,\n",
-      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1059],\n",
-      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1039],\n",
-      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1078,  0.1059,  0.1039]],\n",
-      "\n",
-      "         [[ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
-      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
-      "          [ 0.0804,  0.0745,  0.0706,  ...,  0.0510,  0.0510,  0.0510],\n",
-      "          ...,\n",
-      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1059],\n",
-      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1039,  0.1039,  0.1039],\n",
-      "          [ 0.1157,  0.1059,  0.1000,  ...,  0.1078,  0.1059,  0.1039]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 0.1608,  0.1608,  0.1588,  ...,  0.0294,  0.0275,  0.0275],\n",
-      "          [ 0.1608,  0.1627,  0.1608,  ...,  0.0569,  0.0490,  0.0431],\n",
-      "          [ 0.1647,  0.1647,  0.1647,  ...,  0.0922,  0.0843,  0.0765],\n",
-      "          ...,\n",
-      "          [ 0.1725,  0.1745,  0.1745,  ...,  0.1765,  0.1745,  0.1784],\n",
-      "          [ 0.1706,  0.1725,  0.1725,  ...,  0.1745,  0.1745,  0.1765],\n",
-      "          [ 0.1667,  0.1686,  0.1686,  ...,  0.1745,  0.1745,  0.1784]],\n",
-      "\n",
-      "         [[ 0.1608,  0.1608,  0.1588,  ...,  0.0294,  0.0275,  0.0275],\n",
-      "          [ 0.1608,  0.1627,  0.1608,  ...,  0.0569,  0.0490,  0.0431],\n",
-      "          [ 0.1647,  0.1647,  0.1647,  ...,  0.0922,  0.0843,  0.0765],\n",
-      "          ...,\n",
-      "          [ 0.1725,  0.1745,  0.1745,  ...,  0.1765,  0.1745,  0.1784],\n",
-      "          [ 0.1706,  0.1725,  0.1725,  ...,  0.1745,  0.1745,  0.1765],\n",
-      "          [ 0.1667,  0.1686,  0.1686,  ...,  0.1745,  0.1745,  0.1784]],\n",
-      "\n",
-      "         [[ 0.1608,  0.1608,  0.1588,  ...,  0.0294,  0.0275,  0.0275],\n",
-      "          [ 0.1608,  0.1627,  0.1608,  ...,  0.0569,  0.0490,  0.0431],\n",
-      "          [ 0.1647,  0.1647,  0.1647,  ...,  0.0922,  0.0843,  0.0765],\n",
-      "          ...,\n",
-      "          [ 0.1725,  0.1745,  0.1745,  ...,  0.1765,  0.1745,  0.1784],\n",
-      "          [ 0.1706,  0.1725,  0.1725,  ...,  0.1745,  0.1745,  0.1765],\n",
-      "          [ 0.1667,  0.1686,  0.1686,  ...,  0.1745,  0.1745,  0.1784]]]]), tensor([ 0,  1,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,\n",
-      "         1,  1,  0,  1,  1,  1,  0,  1,  0,  0,  0,  0,  0,  1,\n",
-      "         0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  1,  1,  0,  1,\n",
-      "         1,  0,  0,  1,  0,  0,  1,  0,  0,  0,  0,  1,  1,  0,\n",
-      "         1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  0,  0,  0,\n",
-      "         0,  1,  0,  0,  0,  1,  0,  0,  0,  0])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in dataloaders['train']:\n",
     "    print(i)\n",
@@ -393,6 +230,8 @@
    "source": [
     "model_ft = models.densenet161(pretrained=True)\n",
     "num_ftrs = model_ft.classifier.in_features\n",
+    "del model_ft.classifier\n",
+    "model_ft.dropout = nn.Dropout(p=0.5)\n",
     "model_ft.classifier = nn.Linear(num_ftrs, 2)\n",
     "\n",
     "if use_gpu:\n",
@@ -418,6 +257,15 @@
    "source": [
     "model_ft = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler,\n",
     "                       num_epochs=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_ft"
    ]
   },
   {
