--- a/Transfer Leaning Example.ipynb
+++ b/Transfer Leaning Example.ipynb
@@ -75,17 +75,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in dataloaders['train']:\n",
-    "    print(i)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def imshow(inp, title=None):\n",
     "    \"\"\"Imshow for Tensor.\"\"\"\n",
     "    inp = inp.numpy().transpose((1, 2, 0))\n",
@@ -265,7 +254,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_ft"
+    "finish_time = time.strftime(\"%Y-%m-%d-%H-%M-%S\",time.localtime(time.time()))\n",
+    "model_name = finish_time + '.pkl'\n",
+    "torch.save(model_ft, model_name)\n",
+    "# Loading model use the following code\n",
+    "# model = torch.load('model.pkl')"
    ]
   },
   {
